Fixing z-index of NavigationLink.

--- a/src/components/navigation-link/navigation-link.module.css
+++ b/src/components/navigation-link/navigation-link.module.css
@@ -5,7 +5,7 @@
     letter-spacing: .1em;
     position: relative;
     text-decoration: none;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navigation-link:visited {
